# DomesdayDuplicator-firmware

./: README.md
.github/workflows/: build-firmware.yml
DE0-NANO/DomesdayDuplicator/: DomesdayDuplicator.SDC  DomesdayDuplicator.cdf  DomesdayDuplicator.cof  DomesdayDuplicator.qsf  DomesdayDuplicator.v  IPfifo.qip  IPfifo.v  IPfifo_bb.v  IPfifo_tb.v  IPpllGenerator.qip  IPpllGenerator.v  IPpllGenerator_bb.v  buffer.v  dataGenerator.v  fx3StateMachine.v  statusLED.v
fx3-firmware/: .gitignore  BUILD.md  CMakeLists.txt  arm-none-eabi-toolchain.cmake
fx3-firmware/cyfx3sdk/fw_build/boot_fw/: cyfx3.ld  cyfx3.scat  cyfx3_256k.ld  cyfx3_512k.ld  fx3_armgcc_config.mak  fx3_armrvds_config.mak  fx3_build_config.mak
fx3-firmware/cyfx3sdk/fw_build/fx3_fw/: cx3_build_config.mak  cyfx3.scat  cyfx_startup.S  cyfxcppsyscall.cpp  cyfxtx.cpp  fx3_256k.ld  fx3_512k.ld  fx3_armg++_config.mak  fx3_armgcc_config.mak  fx3_armrvds_config.mak  fx3_build_config.mak  fx3cpp.ld
fx3-firmware/cyfx3sdk/fw_lib/1_3_5/inc/: cyfxapidesc.h  cyu3cardmgr.h  cyu3cardmgr_fx3s.h  cyu3descriptor.h  cyu3error.h  cyu3externcend.h  cyu3gpif.h  cyu3gpio.h  cyu3i2c.h  cyu3lpp.h  cyu3mbox.h  cyu3mipicsi.h  cyu3mmu.h  cyu3pib.h  cyu3spi.h  cyu3tx.h  cyu3types.h  cyu3usb.h  cyu3usbhost.h  cyu3usbotg.h  cyu3utils.h  cyu3vic.h  i2s_regs.h  pib_regs.h  spi_regs.h
fx3-firmware/cyfx3sdk/util/elf2img/: elf2img.c
fx3-firmware/firmware/: domesday-duplicator.c  usb-descriptor.c
fx3/fx3-firmware/: CMakeLists.txt  README.md  generate-descriptor.sh
fx3/fx3-firmware/cyfx3sdk/fw_lib/1_3_5/inc/: cyfx3_api.h  cyfxversion.h  cyu3dma.h  cyu3externcstart.h  cyu3i2s.h  cyu3imagesensor.h  cyu3os.h  cyu3sib.h  cyu3sibpp.h  cyu3socket.h  cyu3system.h  cyu3uart.h  cyu3usbconst.h  gpif_regs.h  gpio_regs.h  i2c_regs.h  pp_regs.h  sock_regs.h  uart_regs.h
fx3/fx3-firmware/cyfx3sdk/util/elf2img/: CMakeLists.txt
fx3/fx3-firmware/firmware/: domesday-duplicator.c  domesday-duplicator.h  usb-descriptor.c  version.c
fx3/fx3-programmer/: .gitignore  CMakeLists.txt  README.md
fx3/fx3-programmer/configs/: cy_renumerate.sh
fx3/fx3-programmer/src/: fx3-programmer.c
